# selfprivacy-api

./: .coveragerc  .drone.yml  .gitignore  .pylintrc  CONTRIBUTING.md  MANIFEST.in  README.md  api.nix  default.nix  dump.rdb  flake.nix  gettext_extract.sh  main.py  nix-dependencies-diagram.puml  package.json  pyproject.toml  requirements.txt  setup.py  shell.nix  source.nix  strawberry-graphql.patch  sync-nixpkgs.sh  webhook.nix  zsh-config.nix
.forgejo/workflows/: ci.yml
extra/pam_email_selfprivacy/: Cargo.toml  README.md  default.nix  vm-test.nix
extra/pam_email_selfprivacy/src/: api.rs  config.rs  lib.rs
nixos/: config.nix  module.nix
selfprivacy_api/: __init__.py  app.py  dependencies.py  root_daemon.py  task_registry.py  utils.py
selfprivacy_api/actions/: api_tokens.py  email_passwords.py  encryption.py  ssh.py  (+5 more)
tests/: common.py  conftest.py  test_auth.py  test_autobackup.py  test_backup.py  test_binds.py  test_block_device_utils.py  test_common.py  test_config_item.py  test_dkim.py  test_flake_services_manager.py  test_huey.py  test_jobs.py  test_kanidm.py  test_kanidm_credential_type.py  test_kanidm_utils.py  test_localsecret.py  test_migrations.py  test_model_storage.py  test_models.py  test_network_utils.py  test_nix_utils.py  test_otel_filtering.py  test_redis.py  test_request_memo.py  test_root_daemon.py  test_service_discovery.py  test_services.py  test_services_dkim.py  test_services_systemctl.py  test_ssh.py  test_suggested_services.py  test_system.py  test_templated_service.py  test_users.py  test_utils.py  test_websocket_uvicorn_standalone.py
(+456 files in other folders)
