[build-system]
requires = ["setuptools", "wheel", "portalocker"]
build-backend = "setuptools.build_meta"
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
force-wrap-aliases = false
